Removed dedicated 'current_position' property from Experience
